[KAIZEN-0] starten på data-generator app for testing ved lokal kjøring

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,6 @@ ibm_mq_version=9.3.1.0
 active_mq_version=5.17.3
 kafka_version=3.3.1
 jms_api_version=2.0.1
+postgres_version=42.5.1
 junit_version=5.9.2
+test_containers_version=1.17.6
