--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,30 +120,43 @@ services:
       KAFKA_SOURCE_TOPIC: "arena-soknadstatus"
       KAFKA_TARGET_TOPIC: "modia-soknadstatus"
       KAFKA_BROKER_URL: "redpanda:29092"
-  foreldrepenger-transform:
+#  foreldrepenger-transform:
+#    build:
+#      context: apps/foreldrepenger-soknadstatus-transform
+#    ports:
+#      - "9012:8080"
+#    depends_on:
+#      - redpanda
+#    environment:
+#      APP_NAME: "foreldrepenger-soknadstatus-transform"
+#      APP_VERSION: "dev"
+#      KAFKA_SOURCE_TOPIC: "aapen-sob-oppgaveHendelse-v1"
+#      KAFKA_TARGET_TOPIC: "modia-soknadstatus"
+#      KAFKA_BROKER_URL: "redpanda:29092"
+#  pleiepenger-transform:
+#    build:
+#      context: apps/pleiepenger-soknadstatus-transform
+#    ports:
+#      - "9013:8080"
+#    depends_on:
+#      - redpanda
+#    environment:
+#      APP_NAME: "pleiepenger-soknadstatus-transform"
+#      APP_VERSION: "dev"
+#      KAFKA_SOURCE_TOPIC: "pleiepenger-soknadstatus"
+#      KAFKA_TARGET_TOPIC: "modia-soknadstatus"
+#      KAFKA_BROKER_URL: "redpanda:29092"
+  fp-k9-transform:
     build:
-      context: apps/foreldrepenger-soknadstatus-transform
+      context: apps/fp-k9-soknadstatus-transform
     ports:
-      - "9012:8080"
+      - "9014:8080"
     depends_on:
       - redpanda
     environment:
-      APP_NAME: "foreldrepenger-soknadstatus-transform"
+      APP_NAME: "fp-k9-transform"
       APP_VERSION: "dev"
       KAFKA_SOURCE_TOPIC: "aapen-sob-oppgaveHendelse-v1"
-      KAFKA_TARGET_TOPIC: "modia-soknadstatus"
-      KAFKA_BROKER_URL: "redpanda:29092"
-  pleiepenger-transform:
-    build:
-      context: apps/pleiepenger-soknadstatus-transform
-    ports:
-      - "9013:8080"
-    depends_on:
-      - redpanda
-    environment:
-      APP_NAME: "pleiepenger-soknadstatus-transform"
-      APP_VERSION: "dev"
-      KAFKA_SOURCE_TOPIC: "pleiepenger-soknadstatus"
       KAFKA_TARGET_TOPIC: "modia-soknadstatus"
       KAFKA_BROKER_URL: "redpanda:29092"
   modia-soknadstatus-api:
