--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ postgres_version=42.5.1
 junit_version=5.9.2
 test_containers_version=1.17.6
 graphql_version=6.4.0
+nav_token_client_version=2.2023.01.10_13.49-81ddc732df3a
