--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ junit_version=5.9.2
 test_containers_version=1.17.6
 graphql_version=6.4.0
 nav_token_client_version=2.2023.01.10_13.49-81ddc732df3a
+meldingsdefinisjon_version=2612.db4dc68
+glassfish_jaxb_runtime_version=2.3.1
+javax_jaxb_api_version=2.3.1
