[KAIZEN-0] github action

--- a/.github/workflows/arena-infotryd-soknadsstatus-transform.yaml
+++ b/.github/workflows/arena-infotryd-soknadsstatus-transform.yaml
@@ -13,12 +13,12 @@ on:
           - false
   push:
     branches:
-      - dev
+      - master
     paths:
       - common/**
   pull_request:
     branches:
-      - dev
+      - master
     paths:
       - common/**
 
