--- a/.github/workflows/mq-to-kafka.yaml
+++ b/.github/workflows/mq-to-kafka.yaml
@@ -16,11 +16,13 @@ on:
       - master
     paths:
       - common/**
+      - apps/mq-to-kafka/**
   pull_request:
     branches:
       - master
     paths:
       - common/**
+      - apps/mq-to-kafka/**
 
 jobs:
   test:
