[KAIZEN-0] filtering og docker fiks for arena-infotrygd-soknadsstatus-transform

--- a/.github/workflows/arena-infotryd-soknadsstatus-transform.yaml
+++ b/.github/workflows/arena-infotryd-soknadsstatus-transform.yaml
@@ -14,12 +14,16 @@ on:
   push:
     branches:
       - master
+      - dev
+      - feature/**
+      - bugfix/**
     paths:
       - common/**
       - apps/arena-infotrygd-soknadsstatus-transform/**
   pull_request:
     branches:
       - master
+      - dev
     paths:
       - common/**
       - apps/arena-infotrygd-soknadsstatus-transform/**
