--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ kotlin_version=1.7.21
 ktor_version=2.0.3
 kotlinx_serialization_version=1.4.1
 kotlinx_datetime_version=0.4.0
+kotlinx_coroutines_version=1.7.0-RC
 logback_version=1.4.5
 logstash_version=7.1.1
 prometheus_version=1.8.5
