--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
     environment:
       APP_NAME: "mq-to-kafka"
       APP_VERSION: "dev"
-      KAFKA_TOPIC: "arena-infotrygd-soknadsstatus"
+      KAFKA_TARGET_TOPIC: "arena-infotrygd-soknadsstatus"
       KAFKA_BROKER_URL: "redpanda:29092"
       JMS_QUEUE: "arena-infotrygd-soknadsstatus"
       JMS_HOST: "activemq"
@@ -90,6 +90,12 @@ services:
       KAFKA_SOURCE_TOPIC: "arena-infotrygd-soknadsstatus"
       KAFKA_TARGET_TOPIC: "modia-soknadsstatus"
       KAFKA_BROKER_URL: "redpanda:29092"
+      KAFKA_DEAD_LETTER_QUEUE_TOPIC: "arena-infotrygd-soknadsstatus-dlq"
+      KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
+      KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "fp_k9_dlq_event_skip"
+      JDBC_URL: "jdbc:postgresql://postgres:5432/modia-soknadsstatus"
+      JDBC_USERNAME: "admin"
+      JDBC_PASSWORD: "admin"
   fp-k9-transform:
     build:
       dockerfile: ../../docker/Dockerfile
@@ -104,6 +110,12 @@ services:
       KAFKA_SOURCE_TOPIC: "aapen-sob-oppgaveHendelse-v1"
       KAFKA_TARGET_TOPIC: "modia-soknadsstatus"
       KAFKA_BROKER_URL: "redpanda:29092"
+      KAFKA_DEAD_LETTER_QUEUE_TOPIC: "aapen-sob-oppgaveHendelse-v1-dlq"
+      KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
+      KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "fp_k9_dlq_event_skip"
+      JDBC_URL: "jdbc:postgresql://postgres:5432/modia-soknadsstatus"
+      JDBC_USERNAME: "admin"
+      JDBC_PASSWORD: "admin"
   modia-soknadsstatus-api:
     build:
       dockerfile: ../../docker/Dockerfile
@@ -121,6 +133,10 @@ services:
       KAFKA_SOURCE_TOPIC: "modia-soknadsstatus"
       KAFKA_TARGET_TOPIC: "N/A"
       KAFKA_BROKER_URL: "redpanda:29092"
+      KAFKA_DEAD_LETTER_QUEUE_TOPIC: "modia-soknadsstatus-dlq"
+      KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
+      KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "modia_soknadsstatus_dlq_event_skip"
+
       JDBC_URL: "jdbc:postgresql://postgres:5432/modia-soknadsstatus"
       JDBC_USERNAME: "admin"
       JDBC_PASSWORD: "admin"
