--- a/.github/workflows/.build.yaml
+++ b/.github/workflows/.build.yaml
@@ -1,11 +1,6 @@
 name: ..build.yaml
 
-on:
-  workflow_call:
-    outputs:
-      image:
-        description: "Docker image url"
-        value: ${{ jobs.build-and-publish.outputs.image }}
+on: [workflow_call]
 
 jobs:
   build-and-publish:
@@ -13,9 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       image: ghcr.io/${{ github.repository }}/${{ github.workflow }}:${{ github.sha }}
-      branch-image: ghcr.io/${{ github.repository }}/${{ github.workflow }}
-    outputs:
-      image: ${{ env.image }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,8 +17,6 @@ jobs:
           distribution: temurin
           java-version: 17.x
           cache: gradle
-      - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v4
       - name: Gradle test and build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -37,17 +27,42 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker build --tag ${{ env.image }} --tag ${{ env.branch-image }}:${{ env.GITHUB_REF_SLUG }} -f docker/Dockerfile apps/${{ github.workflow }}
+          docker build --tag ${{ env.image }} -f docker/Dockerfile apps/${{ github.workflow }}
           docker push ${{ env.image }}
-          docker push ${{ env.branch-image }}:${{ env.GITHUB_REF_SLUG }}
       - name: Publish Prod image
         if: github.ref == 'refs/heads/master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
-          docker build --tag ${{ env.image }} --tag ${{ env.branch-image }}:${{ env.GITHUB_REF_SLUG }} -f docker/Dockerfile apps/${{ github.workflow }}
+          docker build --tag ${{ env.image }} -f docker/Dockerfile apps/${{ github.workflow }}
           docker push ${{ env.image }}
-          docker push ${{ env.branch-image }}:${{ env.GITHUB_REF_SLUG }}
-      - name: Print docker tag
-        run: echo 'Docker-tag er ${{ env.image }} ' >> $GITHUB_STEP_SUMMARY
+  deploy-qa:
+    name: Deploy to preprod
+    needs: build-and-publish
+    if: github.ref == 'refs/heads/dev'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          PRINT_PAYLOAD: true
+          CLUSTER: dev-gcp
+          RESOURCE: ${{github.workflow}}/.nais/dev.yml
+          VAR: version=${{ github.sha }}
+
+  deploy-prod:
+    name: Deploy to prod
+    needs: build-and-publish
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          PRINT_PAYLOAD: true
+          CLUSTER: prod-gcp
+          RESOURCE: ${{github.workflow}}/.nais/prod.yml
+          VAR: version=${{ github.sha }}
