--- a/apps/fp-k9-soknadsstatus-transform/.nais/dev.yaml
+++ b/apps/fp-k9-soknadsstatus-transform/.nais/dev.yaml
@@ -9,6 +9,17 @@ spec:
   image: {{image}}
   port: 8080
   team: personoversikt
+  replicas:
+    min: 1
+    max: 1
+    cpuThresholdPercentage: 90
+  resources:
+    limits:
+      cpu: 500m
+      memory: 1Gi
+    requests:
+      cpu: 100m
+      memory: 128Mi
   liveness:
     path: /internal/isAlive
     initialDelay: 20
@@ -19,3 +30,30 @@ spec:
     path: /internal/isReady
     initialDelay: 20
     timeout: 1
+  prometheus:
+    enabled: true
+    path: /internal/metrics
+  kafka:
+    pool: nav-dev
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_14
+        databases:
+          - name: "modia-soknadsstatus"
+  env:
+    - name: APP_MODE
+      value: "NAIS"
+    - name: APP_VERSION
+      value: "dev"
+    - name: KAFKA_SOURCE_TOPIC
+      value: "personoversikt.modia-soknadsstatus-fp-k9-oppdatering"
+    - name: KAFKA_TARGET_TOPIC
+      value: "personoversikt.modia-soknadsstatus-oppdatering"
+    - name: KAFKA_DEAD_LETTER_QUEUE_TOPIC
+      value: "personoversikt.modia-soknadsstatus-fp-k9-dlq"
+    - name: KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS
+      value: "8.64e+7" # One day
+    - name: KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME
+      value: "fp_k9_dlq_event_skip"
+    - name: KAFKA_DEAD_LETTER_QUEUE_METRICS_GAUGE_NAME
+      value: "modia_soknadsstatus_fp_k9_dlq_gauge"
