--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,8 +69,8 @@ services:
       APP_NAME: "mq-to-kafka"
       APP_VERSION: "dev"
       KAFKA_TARGET_TOPIC: "arena-infotrygd-soknadsstatus"
-      KAFKA_BROKER_URL: "redpanda:29092"
-      JMS_QUEUE: "arena-infotrygd-soknadsstatus"
+      KAFKA_BROKERS: "redpanda:29092"
+      JMS_CHANNEL: "arena-infotrygd-soknadsstatus"
       JMS_HOST: "activemq"
       JMS_PORT: "61616"
       JMS_QUEUEMANAGER: ""
@@ -89,7 +89,7 @@ services:
       APP_VERSION: "dev"
       KAFKA_SOURCE_TOPIC: "arena-infotrygd-soknadsstatus"
       KAFKA_TARGET_TOPIC: "modia-soknadsstatus"
-      KAFKA_BROKER_URL: "redpanda:29092"
+      KAFKA_BROKERS: "redpanda:29092"
       KAFKA_DEAD_LETTER_QUEUE_TOPIC: "arena-infotrygd-soknadsstatus-dlq"
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "fp_k9_dlq_event_skip"
@@ -109,7 +109,7 @@ services:
       APP_VERSION: "dev"
       KAFKA_SOURCE_TOPIC: "aapen-sob-oppgaveHendelse-v1"
       KAFKA_TARGET_TOPIC: "modia-soknadsstatus"
-      KAFKA_BROKER_URL: "redpanda:29092"
+      KAFKA_BROKERS: "redpanda:29092"
       KAFKA_DEAD_LETTER_QUEUE_TOPIC: "aapen-sob-oppgaveHendelse-v1-dlq"
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "fp_k9_dlq_event_skip"
@@ -132,7 +132,7 @@ services:
       APP_VERSION: "dev"
       KAFKA_SOURCE_TOPIC: "modia-soknadsstatus"
       KAFKA_TARGET_TOPIC: "N/A"
-      KAFKA_BROKER_URL: "redpanda:29092"
+      KAFKA_BROKERS: "redpanda:29092"
       KAFKA_DEAD_LETTER_QUEUE_TOPIC: "modia-soknadsstatus-dlq"
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "modia_soknadsstatus_dlq_event_skip"
