[KAIZEN-0] Oppdatere paths for filer som skal sørge for rebygging

--- a/.github/workflows/arena-infotryd-soknadsstatus-transform.yaml
+++ b/.github/workflows/arena-infotryd-soknadsstatus-transform.yaml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     paths:
+      - .github/workflows/.build.yaml
+      - .github/workflows/arena-infotrygd-soknadsstatus-transform.yaml
       - common/**
       - apps/arena-infotrygd-soknadsstatus-transform/**
 
