--- a/.github/workflows/fp-k9-soknadsstatus-transform.yaml
+++ b/.github/workflows/fp-k9-soknadsstatus-transform.yaml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     paths:
+      - .github/workflows/.build.yaml
+      - .github/workflows/fp-k9-soknadsstatus-transform.yaml
       - common/**
       - apps/fp-k9-soknadsstatus-transform/**
 
