[KAIZEN-0] Sende inn image

--- a/.github/workflows/.build.yaml
+++ b/.github/workflows/.build.yaml
@@ -9,8 +9,6 @@ jobs:
   build-and-publish:
     name: Build & publish
     runs-on: ubuntu-latest
-    outputs:
-      image: ${{ env.image }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -54,6 +52,7 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: apps/${{github.workflow}}/.nais/dev.yaml
           VAR: version=${{ github.sha }}
+          IMAGE: ${{ env.image }}
 
   deploy-prod:
     name: Deploy to prod
@@ -69,3 +68,4 @@ jobs:
           CLUSTER: prod-gcp
           RESOURCE: apps/${{github.workflow}}/.nais/prod.yaml
           VAR: version=${{ github.sha }}
+          IMAGE: ${{ env.image }}
