--- a/apps/arena-infotrygd-soknadsstatus-transform/.nais/dev.yaml
+++ b/apps/arena-infotrygd-soknadsstatus-transform/.nais/dev.yaml
@@ -41,6 +41,8 @@ spec:
         databases:
           - name: "modia-soknadsstatus"
   env:
+    - name: APP_NAME
+      value: "arena-infotrygd-soknadsstatus-transform"
     - name: APP_MODE
       value: "NAIS"
     - name: APP_VERSION
