[KAIZEN-0] Legge til env variabel for DB navn

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -47,6 +47,8 @@ spec:
       value: "NAIS"
     - name: APP_VERSION
       value: "dev"
+    - name: DB_NAME
+      value: "modia-soknadsstatus"
     - name: KAFKA_SOURCE_TOPIC
       value: "personoversikt.modia-soknadsstatus-oppdatering"
     - name: KAFKA_DEAD_LETTER_QUEUE_TOPIC
