--- a/apps/arena-infotrygd-soknadsstatus-transform/.nais/dev.yaml
+++ b/apps/arena-infotrygd-soknadsstatus-transform/.nais/dev.yaml
@@ -47,6 +47,8 @@ spec:
       value: "NAIS"
     - name: APP_VERSION
       value: "dev"
+    - name: DB_NAME
+      value: "modia-soknadsstatus"
     - name: KAFKA_SOURCE_TOPIC
       value: "personoversikt.modia-soknadsstatus-arena-infotrygd-oppdatering"
     - name: KAFKA_TARGET_TOPIC
