[KAIZEN-0] Flytt db migreringer til hver app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,10 +96,10 @@ services:
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "fp_k9_dlq_event_skip"
       DB_NAME: "modia-soknadsstatus"
-      NAIS_DATABASE_ARENA-INFOTRYGD-SOKNADSSTATUS-TRANSFORM_MODIA-SOKNADSSTATUS_HOST: "localhost"
-      NAIS_DATABASE_ARENA-INFOTRYGD-SOKNADSSTATUS-TRANSFORM_MODIA-SOKNADSSTATUS_PORT: "5432"
-      NAIS_DATABASE_ARENA-INFOTRYGD-SOKNADSSTATUS-TRANSFORM_MODIA-SOKNADSSTATUS_USERNAME: "admin"
-      NAIS_DATABASE_ARENA-INFOTRYGD-SOKNADSSTATUS-TRANSFORM_MODIA-SOKNADSSTATUS_PASSWORD: "admin"
+      NAIS_DATABASE_ARENA_INFOTRYGD_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_HOST: "localhost"
+      NAIS_DATABASE_ARENA_INFOTRYGD_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_PORT: "5432"
+      NAIS_DATABASE_ARENA_INFOTRYGD_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_USERNAME: "admin"
+      NAIS_DATABASE_ARENA_INFOTRYGD_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_PASSWORD: "admin"
   fp-k9-transform:
     build:
       dockerfile: ../../docker/Dockerfile
@@ -109,7 +109,7 @@ services:
     depends_on:
       - redpanda
     environment:
-      APP_NAME: "fp-k9-transform"
+      APP_NAME: "fp-k9-soknadsstatus-transform"
       APP_VERSION: "dev"
       APP_MODE: "LOCALLY_WITHIN_IDEA"
 
@@ -120,10 +120,10 @@ services:
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "fp_k9_dlq_event_skip"
       DB_NAME: "modia-soknadsstatus"
-      NAIS_DATABASE_FP-K9-TRANSFORM_MODIA-SOKNADSSTATUS_HOST: "localhost"
-      NAIS_DATABASE_FP-K9-TRANSFORM_MODIA-SOKNADSSTATUS_PORT: "5432"
-      NAIS_DATABASE_FP-K9-TRANSFORM_MODIA-SOKNADSSTATUS_USERNAME: "admin"
-      NAIS_DATABASE_FP-K9-TRANSFORM_MODIA-SOKNADSSTATUS_PASSWORD: "admin"
+      NAIS_DATABASE_FP_K9_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_HOST: "localhost"
+      NAIS_DATABASE_FP_K9_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_PORT: "5432"
+      NAIS_DATABASE_FP_K9_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_USERNAME: "admin"
+      NAIS_DATABASE_FP_K9_SOKNADSSTATUS_TRANSFORM_MODIA_SOKNADSSTATUS_PASSWORD: "admin"
   modia-soknadsstatus-api:
     build:
       dockerfile: ../../docker/Dockerfile
@@ -147,7 +147,7 @@ services:
       KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS: "10000"
       KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME: "modia_soknadsstatus_dlq_event_skip"
       DB_NAME: "modia-soknadsstatus"
-      NAIS_DATABASE_MODIA-SOKNADSSTATUS-API_MODIA-SOKNADSSTATUS_HOST: "localhost"
-      NAIS_DATABASE_MODIA-SOKNADSSTATUS-API_MODIA-SOKNADSSTATUS_PORT: "5432"
-      NAIS_DATABASE_MODIA-SOKNADSSTATUS-API_MODIA-SOKNADSSTATUS_USERNAME: "admin"
-      NAIS_DATABASE_MODIA-SOKNADSSTATUS-API_MODIA-SOKNADSSTATUS_PASSWORD: "admin"
+      NAIS_DATABASE_MODIA_SOKNADSSTATUS_API_MODIA_SOKNADSSTATUS_HOST: "localhost"
+      NAIS_DATABASE_MODIA_SOKNADSSTATUS_API_MODIA_SOKNADSSTATUS_PORT: "5432"
+      NAIS_DATABASE_MODIA_SOKNADSSTATUS_API_MODIA_SOKNADSSTATUS_USERNAME: "admin"
+      NAIS_DATABASE_MODIA_SOKNADSSTATUS_API_MODIA_SOKNADSSTATUS_PASSWORD: "admin"
