--- a/apps/fp-k9-soknadsstatus-transform/.nais/dev.yaml
+++ b/apps/fp-k9-soknadsstatus-transform/.nais/dev.yaml
@@ -39,7 +39,7 @@ spec:
     sqlInstances:
       - type: POSTGRES_14
         databases:
-          - name: "modia-soknadsstatus"
+          - name: fp-k9-soknadsstatus-db
   env:
     - name: APP_NAME
       value: "fp-k9-soknadsstatus-transform"
@@ -48,7 +48,7 @@ spec:
     - name: APP_VERSION
       value: "dev"
     - name: DB_NAME
-      value: "modia-soknadsstatus"
+      value: "fp-k9-soknadsstatus-db"
     - name: KAFKA_SOURCE_TOPIC
       value: "personoversikt.modia-soknadsstatus-fp-k9-oppdatering"
     - name: KAFKA_TARGET_TOPIC
