--- a/apps/fp-k9-soknadsstatus-transform/.nais/dev.yaml
+++ b/apps/fp-k9-soknadsstatus-transform/.nais/dev.yaml
@@ -38,6 +38,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_14
+        cascadingDelete: true
         databases:
           - name: fp-k9-soknadsstatus-db
   env:
