--- a/.github/workflows/modia-soknadsstatus-oppdatering.yaml
+++ b/.github/workflows/modia-soknadsstatus-oppdatering.yaml
@@ -12,4 +12,4 @@ jobs:
     uses: ./.github/workflows/.topic.yaml
     secrets: inherit
     with:
-      topic-file-name: modia-soknadsstatus-oppdatering
+      topic-file-name: modia-soknadsstatus-oppdatering.yml
