--- a/apps/mq-to-kafka/.nais/dev.yaml
+++ b/apps/mq-to-kafka/.nais/dev.yaml
@@ -43,8 +43,12 @@ spec:
             - name: MQ
               port: 1413
               protocol: TCP
+  filesFrom:
+    - secret: mq-tls-keystore
+      mountPath: /var/run/keystore
   envFrom:
     - secret: mq-to-kafka
+    - secret: mq-tls-keystore-password
   env:
     - name: APP_NAME
       value: "mq-to-kafka"
@@ -59,8 +63,12 @@ spec:
     - name: JMS_PORT
       value: "1413"
     - name: JMS_QUEUE_MANAGER
-      value: "mqls03"
+      value: "MQLS03"
     - name: JMS_CHANNEL
       value: "Q1_MODIA_SS"
+    - name: JMS_QUEUE_NAME
+      value: "QA.Q1_MODIA_SS.HENDELSER_FRA_INFOTRYGD_OG_ARENA"
     - name: JMS_USERNAME
       value: "srvmodia-ss-mq"
+    - name: JMS_KEYSTORE_PATH
+      value: "/var/run/keystore/secret"
