[KAIZEN-0] Gi skrivetilgang til fpsak til hendelse-oppdatering

--- a/.nais/topics/modia-soknadsstatus-hendelse.yml
+++ b/.nais/topics/modia-soknadsstatus-hendelse.yml
@@ -24,3 +24,6 @@ spec:
     - team: personoversikt
       application: soknadsstatus-hendelse-transform
       access: read
+    - team: teamforeldrepenger
+      application: fpsak
+      access: write
