[KAIZEN-0] caching for pdl

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ mockk_version=1.13.4
 meldingsdefinisjon_version=2612.db4dc68
 glassfish_jaxb_runtime_version=2.3.1
 jakarta_xml_bind_version=2.3.2
+caffeine_version=3.1.6
