[OPP-1573] Legge til ingresser for søknadsstatus api i dev

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -9,6 +9,9 @@ spec:
   image: {{image}}
   port: 8080
   team: personoversikt
+  ingresses:
+    - https://modia-soknadsstatus-api.intern.dev.no
+    - https://intern.dev.no/modia-soknadsstatus-api
   replicas:
     min: 1
     max: 1
