[KAIZEN-0] Gi Ida tilgang til søknadsstatus-api

--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -48,6 +48,11 @@ spec:
       enabled: true
       allowAllUsers: true
   accessPolicy:
+    inbound:
+      rules:
+        - application: ida
+          cluster: prod-fss
+          namespace: traktor
     outbound:
       external:
         - host: graph.microsoft.com
