[KAIZEN-0] Skru på secure log

--- a/apps/mq-to-kafka/.nais/dev.yaml
+++ b/apps/mq-to-kafka/.nais/dev.yaml
@@ -33,6 +33,8 @@ spec:
   prometheus:
     enabled: true
     path: /internal/metrics
+  secureLogs:
+    enabled: true
   kafka:
     pool: nav-dev
   accessPolicy:
