--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -36,6 +36,8 @@ spec:
   prometheus:
     enabled: true
     path: /internal/metrics
+  secureLogs:
+    enabled: true
   kafka:
     pool: nav-dev
   gcp:
