--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ glassfish_jaxb_runtime_version=2.3.1
 jakarta_xml_bind_version=2.3.2
 mock_webserver_version=4.11.0
 caffeine_version=3.1.6
+guava_testlib_version=32.0.0-jre
