--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -62,7 +62,7 @@ spec:
         - host: axsys.dev-fss-pub.nais.io
         - host: skjermede-personer-pip.intern.dev.nav.no
         - host: unleash.nais.io
-        - host: norg2.dev.intern.nav.no
+        - host: norg2.dev-fss-pub.nais.io
   env:
     - name: APP_NAME
       value: "modia-soknadsstatus-api"
@@ -83,7 +83,7 @@ spec:
     - name: KAFKA_DEAD_LETTER_QUEUE_METRICS_GAUGE_NAME
       value: "modia_soknadsstatus_api_dlq_gauge"
     - name: NORG2_URL
-      value: "https://norg2.dev.intern.nav.no/norg2/api/v1"
+      value: "https://norg2.dev-fss-pub.nais.io/norg2"
     - name: PDL_API_URL
       value: "https://pdl-api.dev-fss-pub.nais.io/graphql"
     - name: PDL_SCOPE
