[OPP-1575] Ferdigstille filter i søknadsstatus

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,11 @@ test_containers_version=1.17.6
 graphql_version=6.4.0
 nav_common_version=2.2023.01.10_13.49-81ddc732df3a
 mockk_version=1.13.4
-meldingsdefinisjon_version=2612.db4dc68
+meldingsdefinisjon_version=2618.0448179
+sobproxy_meldingsdefinisjon_version=1.1.0
 glassfish_jaxb_runtime_version=2.3.1
 jakarta_xml_bind_version=2.3.2
 mock_webserver_version=4.11.0
 caffeine_version=3.1.6
 guava_testlib_version=32.0.0-jre
+jaxbVersion=4.0.0
