--- a/apps/modia-soknadsstatus-api/.nais/dev.yaml
+++ b/apps/modia-soknadsstatus-api/.nais/dev.yaml
@@ -92,7 +92,7 @@ spec:
     - name: PDL_SCOPE
       value: "dev-fss:pdl:pdl-api"
     - name: AXSYS_URL
-      value: "https://axsys.dev.adeo.no"
+      value: "https://axsys.dev-fss-pub.nais.io"
     - name: AXSYS_SCOPE
       value: "dev-fss:org:axsys"
     - name: SKJERMEDE_PERSONER_PIP_URL
