--- a/apps/soknadsstatus-hendelse-transform/.nais/dev.yaml
+++ b/apps/soknadsstatus-hendelse-transform/.nais/dev.yaml
@@ -59,7 +59,7 @@ spec:
     - name: KAFKA_DEAD_LETTER_QUEUE_TOPIC
       value: "personoversikt.modia-soknadsstatus-hendelse-dlq"
     - name: KAFKA_DEAD_LETTER_QUEUE_CONSUMER_POLL_INTERVAL_MS
-      value: "8.64e+7" # One day
+      value: "60000"
     - name: KAFKA_DEAD_LETTER_QUEUE_SKIP_TABLE_NAME
       value: "hendelse_dlq_event_skip"
     - name: KAFKA_DEAD_LETTER_QUEUE_METRICS_GAUGE_NAME
